# clang-plugin-test

./: CMakeLists.txt  README.md  funcxable.cpp  myplugin.cpp
test/: .gitignore  astdump.sh  funcxable.sh  myplugin.sh  test.sh
test/debug/: test.cpp
test/myplugin/header/: test.cpp  test.h  test2.h  test3.h
test/myplugin/template/: test.cpp
test/myplugin/template2/: test.cpp
